--- a/UFCMobile/Base.lproj/Main.storyboard
+++ b/UFCMobile/Base.lproj/Main.storyboard
@@ -200,22 +200,65 @@
             </objects>
             <point key="canvasLocation" x="2037" y="1181"/>
         </scene>
-        <!--View Controller-->
+        <!--Home View Controller-->
         <scene sceneID="Gta-qd-lUn">
             <objects>
-                <viewController id="fdJ-jW-2bz" sceneMemberID="viewController">
+                <viewController id="fdJ-jW-2bz" customClass="HomeViewController" customModule="UFCMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FW3-3N-rwA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tEk-fA-EdY">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="65.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mc6-Q0-Z0f">
+                                    <size key="itemSize" width="60" height="70"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sk6-di-nYV">
+                                        <rect key="frame" x="0.0" y="-5" width="60" height="70"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="60" height="70"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="fdJ-jW-2bz" id="mni-EW-1Cm"/>
+                                    <outlet property="delegate" destination="fdJ-jW-2bz" id="VAS-R3-6fO"/>
+                                </connections>
+                            </collectionView>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BjJ-na-Uhk">
+                                <rect key="frame" x="0.0" y="65.5" width="320" height="389.5"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="BjJ-na-Uhk" firstAttribute="top" secondItem="tEk-fA-EdY" secondAttribute="bottom" id="2i9-iX-r7N"/>
+                            <constraint firstItem="tEk-fA-EdY" firstAttribute="height" secondItem="FW3-3N-rwA" secondAttribute="height" multiplier="0.13" id="Csp-4t-yYz"/>
+                            <constraint firstItem="tEk-fA-EdY" firstAttribute="leading" secondItem="D84-hU-m0q" secondAttribute="leading" id="Ux1-8O-NbI"/>
+                            <constraint firstItem="D84-hU-m0q" firstAttribute="trailing" secondItem="BjJ-na-Uhk" secondAttribute="trailing" id="a1A-EL-jG4"/>
+                            <constraint firstItem="BjJ-na-Uhk" firstAttribute="leading" secondItem="D84-hU-m0q" secondAttribute="leading" id="fRm-tK-FhG"/>
+                            <constraint firstItem="D84-hU-m0q" firstAttribute="bottom" secondItem="BjJ-na-Uhk" secondAttribute="bottom" id="feB-gA-jer"/>
+                            <constraint firstItem="tEk-fA-EdY" firstAttribute="top" secondItem="FW3-3N-rwA" secondAttribute="top" id="lJz-Bn-dcv"/>
+                            <constraint firstItem="D84-hU-m0q" firstAttribute="trailing" secondItem="tEk-fA-EdY" secondAttribute="trailing" id="qHG-lh-bg8"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="D84-hU-m0q"/>
                     </view>
                     <navigationItem key="navigationItem" id="izY-jX-8tb"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="diasCollectionView" destination="tEk-fA-EdY" id="NAX-el-xea"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lMn-qF-c3q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2779" y="-207"/>
+            <point key="canvasLocation" x="2778.75" y="-207.04225352112675"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="igT-dG-mDD">
@@ -258,10 +301,11 @@
         <!--Home-->
         <scene sceneID="wMM-tM-JfJ">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="H5y-Lu-9ER" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="H5y-Lu-9ER" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="Cyc-Qq-kSc"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="yoG-QB-cp4">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="yoG-QB-cp4">
+                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
