--- a/UFCMobile/Base.lproj/Main.storyboard
+++ b/UFCMobile/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AQX-HM-8tp">
-    <device id="retina4_0" orientation="portrait">
+    <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,31 +16,31 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="LoginController" customModule="UFCMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="reitoria" translatesAutoresizingMaskIntoConstraints="NO" id="t9p-6X-Bmv">
-                                <rect key="frame" x="0.0" y="-28.5" width="320" height="625"/>
+                                <rect key="frame" x="0.0" y="-33.5" width="375" height="734"/>
                             </imageView>
                             <visualEffectView opaque="NO" alpha="0.84999999999999998" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BPP-5x-X1J">
-                                <rect key="frame" x="0.0" y="-28.5" width="320" height="625"/>
+                                <rect key="frame" x="0.0" y="-33.5" width="375" height="734"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="koa-oA-DRW">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="625"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="375" height="734"/>
                                     <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 </view>
                                 <blurEffect style="prominent"/>
                             </visualEffectView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="UFClogo" translatesAutoresizingMaskIntoConstraints="NO" id="bI2-0c-OSi">
-                                <rect key="frame" x="0.0" y="70" width="320" height="170.5"/>
+                                <rect key="frame" x="0.0" y="70" width="375" height="200"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="UFC Mobile" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="ZSN-ex-0cJ">
-                                <rect key="frame" x="96" y="250.5" width="128" height="32.5"/>
+                                <rect key="frame" x="112.5" y="280" width="150" height="32.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="27"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Matricula" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="1KX-3e-aG7" customClass="IsaoTextField" customModule="TextFieldEffects">
-                                <rect key="frame" x="32" y="323" width="256" height="45.5"/>
+                                <rect key="frame" x="37.5" y="352.5" width="300" height="45.5"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -54,7 +54,7 @@
                                 </userDefinedRuntimeAttributes>
                             </textField>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="line" placeholder="Senha" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P6J-VN-R8N" customClass="IsaoTextField" customModule="TextFieldEffects">
-                                <rect key="frame" x="31.5" y="388.5" width="256" height="45.5"/>
+                                <rect key="frame" x="37" y="418" width="300" height="45.5"/>
                                 <nil key="textColor"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="21"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -81,7 +81,7 @@
                                 </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9dd-PY-TcT">
-                                <rect key="frame" x="82" y="474" width="154" height="36"/>
+                                <rect key="frame" x="96.5" y="503.5" width="180" height="36"/>
                                 <color key="backgroundColor" red="0.043137254899999998" green="0.53333333329999999" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Button">
@@ -92,7 +92,7 @@
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5UY-Oo-H00">
-                                <rect key="frame" x="31.5" y="512.5" width="256" height="45.5"/>
+                                <rect key="frame" x="37" y="611.5" width="300" height="45.5"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="16"/>
                                 <state key="normal" title="Esqueci minha senha">
                                     <color key="titleColor" red="0.1215686277" green="0.1294117719" blue="0.1411764771" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -157,7 +157,7 @@
             <objects>
                 <viewController id="DWE-6g-y9O" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="xmt-Xw-E07">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="Rz7-JS-Lma"/>
@@ -173,7 +173,7 @@
             <objects>
                 <viewController id="6x5-OJ-uKp" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ost-iE-rwQ">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="FHF-7w-i5x"/>
@@ -189,7 +189,7 @@
             <objects>
                 <viewController id="G46-87-t8M" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="hbJ-RM-Wmi">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="7iN-WA-Mis"/>
@@ -200,17 +200,20 @@
             </objects>
             <point key="canvasLocation" x="2037" y="1181"/>
         </scene>
-        <!--Home View Controller-->
+        <!--Inicio-->
         <scene sceneID="Gta-qd-lUn">
             <objects>
                 <viewController id="fdJ-jW-2bz" customClass="HomeViewController" customModule="UFCMobile" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FW3-3N-rwA">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="551"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="tEk-fA-EdY">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="65.5"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="WqF-SI-UaV"/>
+                                </constraints>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="mc6-Q0-Z0f">
                                     <size key="itemSize" width="60" height="70"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
@@ -219,7 +222,7 @@
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="sk6-di-nYV">
-                                        <rect key="frame" x="0.0" y="-5" width="60" height="70"/>
+                                        <rect key="frame" x="0.0" y="-10" width="60" height="70"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
                                             <rect key="frame" x="0.0" y="0.0" width="60" height="70"/>
@@ -233,14 +236,13 @@
                                 </connections>
                             </collectionView>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="BjJ-na-Uhk">
-                                <rect key="frame" x="0.0" y="65.5" width="320" height="389.5"/>
+                                <rect key="frame" x="0.0" y="50" width="375" height="452"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="BjJ-na-Uhk" firstAttribute="top" secondItem="tEk-fA-EdY" secondAttribute="bottom" id="2i9-iX-r7N"/>
-                            <constraint firstItem="tEk-fA-EdY" firstAttribute="height" secondItem="FW3-3N-rwA" secondAttribute="height" multiplier="0.13" id="Csp-4t-yYz"/>
                             <constraint firstItem="tEk-fA-EdY" firstAttribute="leading" secondItem="D84-hU-m0q" secondAttribute="leading" id="Ux1-8O-NbI"/>
                             <constraint firstItem="D84-hU-m0q" firstAttribute="trailing" secondItem="BjJ-na-Uhk" secondAttribute="trailing" id="a1A-EL-jG4"/>
                             <constraint firstItem="BjJ-na-Uhk" firstAttribute="leading" secondItem="D84-hU-m0q" secondAttribute="leading" id="fRm-tK-FhG"/>
@@ -250,7 +252,8 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="D84-hU-m0q"/>
                     </view>
-                    <navigationItem key="navigationItem" id="izY-jX-8tb"/>
+                    <extendedEdge key="edgesForExtendedLayout" bottom="YES"/>
+                    <navigationItem key="navigationItem" title="Inicio" id="izY-jX-8tb"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="diasCollectionView" destination="tEk-fA-EdY" id="NAX-el-xea"/>
@@ -264,7 +267,7 @@
         <scene sceneID="igT-dG-mDD">
             <objects>
                 <tabBarController extendedLayoutIncludesOpaqueBars="YES" id="AQX-HM-8tp" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" translucent="NO" id="4z0-0A-XjT">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="4z0-0A-XjT">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -287,7 +290,7 @@
             <objects>
                 <viewController id="cBy-l5-pA8" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jj6-R0-bw6">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="519"/>
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <viewLayoutGuide key="safeArea" id="7Qd-Dz-FU3"/>
@@ -304,8 +307,8 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="H5y-Lu-9ER" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Home" id="Cyc-Qq-kSc"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" id="yoG-QB-cp4">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" translucent="NO" largeTitles="YES" id="yoG-QB-cp4">
+                        <rect key="frame" x="0.0" y="20" width="375" height="96"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
